# rbs-team19

./: README.md
cloud-final-project/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
cloud-final-project/docs/: api_examples.md  bandit_report.json  code_review_log.md  firecracker_integration.md  implementation_notes.md  security_requirements.md  static_analysis_report.md  test_report.md  threat_model_stride.md
cloud-final-project/examples/benign_hello/: handler.py
cloud-final-project/examples/benign_math/: handler.py
cloud-final-project/examples/malicious_eval/: handler.py
cloud-final-project/examples/malicious_subprocess/: handler.py
cloud-final-project/oblak/api/: main.py  routes.py
cloud-final-project/oblak/cli/: config.py  main.py  packager.py
cloud-final-project/oblak/core/: config.py
cloud-final-project/oblak/db/: init_db.py  session.py
cloud-final-project/oblak/models/: entities.py
cloud-final-project/oblak/orchestrator/: base.py  factory.py  firecracker.py  subprocess_sandbox.py
cloud-final-project/oblak/schemas/: dto.py
cloud-final-project/oblak/security/: auth.py
cloud-final-project/oblak/services/: audit_service.py  function_service.py
cloud-final-project/oblak/storage/: local_storage.py
cloud-final-project/oblak/verifier/: clamav.py  code_verifier.py  llm.py  regex_analyzer.py  reports.py  (+1 more)
cloud-final-project/scripts/: build_firecracker_rootfs.sh  init_db.py
cloud-final-project/tests/: test_api.py  test_orchestrator.py  test_verifier.py
(+46 files in other folders)
