[project]
name = "oblak"
version = "0.1.0"
description = "Academic serverless platform for executing user Python code with verification, audit and subprocess or Firecracker isolation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy>=2.0.0",
  "pydantic-settings>=2.2.0",
  "python-multipart>=0.0.9",
  "typer>=0.12.0",
  "requests>=2.31.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "ruff>=0.4.0", "bandit>=1.7.8"]

[project.scripts]
oblak-cdk = "oblak.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
